# r-permute

./: CMakeLists.txt  README.md  benchmark.sh  readlog.sh
include/common/: common.hpp
include/construction/: CMakeLists.txt  constructor.hpp  deterministic.hpp  randomized.hpp
include/ds/: CMakeLists.txt  FL_table.hpp  LF_table.hpp  indexMaxPQ.hpp  index_pq.hpp  static_column.hpp
test/src/: CMakeLists.txt  build_constructor.cpp  build_permute.cpp  run_constructor.cpp
